init: 智能体交互平台